[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obris-cli"
version = "0.1.0"
description = "CLI for capturing screenshots and managing knowledge in Obris"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["obris", "cli", "screenshot", "knowledge-management", "ai", "second-brain", "capture"]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
obris = "obris.cli:cli"

[project.urls]
Homepage = "https://obris.ai"
Repository = "https://github.com/obris-dev/obris-cli"
Documentation = "https://docs.obris.ai"