[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obris-cli"
version = "0.1.0"
description = "CLI for capturing screenshots and managing knowledge in Obris"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Obris", email = "dev@obris.ai" }]
keywords = ["obris", "cli", "screenshot", "knowledge-management", "ai", "second-brain", "capture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
obris = "obris.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["obris"]

[project.urls]
Homepage = "https://obris.ai"
Repository = "https://github.com/obris-dev/obris-cli"
Documentation = "https://docs.obris.ai"
